[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/enemy/template.png" type="Texture" id=1]
[ext_resource path="res://code/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/circle_05.png" type="Texture" id=3]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.454545, 0.0100852 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.936364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 28.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 75.0

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 20
lifetime = 0.4
explosiveness = 0.1
local_coords = false
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector2( 0, 0 )
linear_accel = 200.0
linear_accel_random = 0.3
radial_accel = 5.0
radial_accel_random = 0.2
scale_amount = 3.0
scale_amount_curve = SubResource( 4 )
color = Color( 1, 0.956667, 0.48, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Scream" type="AudioStreamPlayer2D" parent="."]

[node name="Ambient" type="AudioStreamPlayer2D" parent="."]

[node name="LocationTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( -1, 0 )
texture = ExtResource( 3 )
texture_scale = 0.8
color = Color( 1, 0.992157, 0.45098, 1 )
energy = 0.8

[node name="DetectionArea" type="Area2D" parent="Light2D2"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D2/DetectionArea"]
shape = SubResource( 5 )

[node name="Despawn" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[connection signal="timeout" from="LocationTimer" to="." method="_on_LocationTimer_timeout"]
[connection signal="body_entered" from="Light2D2/DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="Light2D2/DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
